新增了7个文档

--- a/index.html
+++ b/index.html
@@ -107,15 +107,40 @@
             </tr>
             <!-- 标准教学文档表格 -->
             <tr>
-                <td>标准教学文档1</td>
-                <td>作者A</td>
-                <td><a href="path/to/document1.pdf" target="_blank">下载</a></td>
+                <td>2.1 Python基础</td>
+                <td>王天泽</td>
+                <td><a href="pdf/2.1%20Python%20Base.pdf" target="_blank">下载</a></td>
+            </tr>
+            <tr>
+                <td>2.2.1 树莓派的基本使用</td>
+                <td>王天泽</td>
+                <td><a href="pdf/2.2.1%20Using%20method%20of%20Pi.pdf" target="_blank">下载</a></td>
+            </tr>
+            <tr>
+                <td>2.3.1.1 人工智能之普通数据处理</td>
+                <td>王天泽</td>
+                <td><a href="pdf/2.3.1.1%20Common%20Data%20Handle.pdf" target="_blank">下载</a></td>
             </tr>
             <!-- 普通文档表格 -->
             <tr>
-                <td>普通文档1</td>
-                <td>作者B</td>
-                <td><a href="path/to/document2.pdf" target="_blank">下载</a></td>
+                <td>Mixly第三方制作库使用教程</td>
+                <td>社会作者</td>
+                <td><a href="pdf/Mixly%20third-party%20library%20usage%20tutorial.pdf" target="_blank">下载</a></td>
+            </tr>
+            <tr>
+                <td>C语言多线程之threads函数库</td>
+                <td>王天泽</td>
+                <td><a href="pdf/C%20threads%20Lib.pdf" target="_blank">下载</a></td>
+            </tr>
+            <tr>
+                <td>基于卷积神经网络的人脸对比研究</td>
+                <td>王天泽</td>
+                <td><a href="pdf/基于卷积神经网络的人脸对比研究.pdf" target="_blank">下载</a></td>
+            </tr>
+            <tr>
+                <td>基于卷积神经网络（CNN）的垃圾分类模型研究</td>
+                <td>王天泽</td>
+                <td><a href="pdf/基于卷积神经网络（CNN）的垃圾分类模型研究.pdf" target="_blank">下载</a></td>
             </tr>
             <!-- 这里可以添加更多的文档行 -->
         </table>
