--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <li>投稿时必须注明题目和作者</li>
             <li>稿件必须使用pdf格式</li>
         </ol>
-        <a href="mailto:your-email@example.com?subject=青麋科技投稿&body=题目：%0A作者：%0A附件：" class="email-link">发送邮件投稿</a>
+        <a href="mailto:momomomo6508@qq.com?subject=青麋科技投稿&body=题目：%0A作者：%0A附件：" class="email-link">发送邮件投稿</a>
     </section>
 </div>
 
